objects/Five9WebserviceCalloutSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Maintain settings for Five9 Webservice callouts.</description>
    <fields>
        <fullName>APIURL__c</fullName>
        <label>APIURL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <label>Domain Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndpointURL__c</fullName>
        <description>Endpoint URL value for Five9 web service callouts in Five9Handler</description>
        <label>EndpointURL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F9key__c</fullName>
        <label>F9key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListName__c</fullName>
        <description>ListName parameter value for addRecordtoListSimple call to Five9</description>
        <label>ListName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterSwitchOn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Uncheck will turn off webservice call outs to Five9</description>
        <label>MasterSwitchOn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityStages__c</fullName>
        <description>Eligible Opportunity Stage values to check for before sending an Opportunity to Five9</description>
        <label>OpportunityStages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password for Five9 User account making webservice callouts</description>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_List__c</fullName>
        <description>List name for appointment reminders</description>
        <label>Reminder List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPDF9list__c</fullName>
        <label>SPDF9list</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Username for User Account used to make Five9 webservice callouts.</description>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>callAsap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>callAsap parameter value for addRecordtoListSimple call to Five9</description>
        <label>callAsap</label>
        <type>Checkbox</type>
    </fields>
    <label>Five9WebserviceCalloutSettings</label>
</CustomObject>